# kaevlibc

./: .gitignore  LICENSE  Makefile  README.md  meson.build
inc/: CIO.h  Cchar.h  Cdef.h  Cerror.h  Clib.h  Cmemory.h  sys.h
src/: CIO.c  Cchar.c  Cerror.c  Clib.c  Cmemory.c  start.c
src/asm/: crt0.s  sys.s
tests/: meson.build  test.c  test1.c  test2.c  test3.c
